--- a/layout_3.html
+++ b/layout_3.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="layout3.css"> 
+  <link rel="stylesheet" href="layout_3.css"> 
  </head>
 
 
@@ -50,14 +50,14 @@
      <div class="container">
        <h2></h2>
      </div>
-            <div class="col-md-8 col-sm-12 col-xs-12">
+            <div class="col-md-7 col-sm-12 col-xs-12">
               <h1>Blog Post Title</h1>
               <h3>by <font color="#4286f4">Test</font></h3>
               <HR>
                 <span> <i class="glyphicon glyphicon-time"></i> Posted on August 21, 2013 at 9:00 PM</span>
                 <hr>
               <div>
-                <img class="img-responsive" src="http://placehold.it/900x300?text=900*300">
+                <img class="img-responsive" src="http://placehold.it/920x350?text=900*300">
                 <HR>
                   <div class="labelpadding">
                      <h3>Lorm ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</h3>
@@ -72,7 +72,7 @@
                   </div>
               </div>
            </div>
-      <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="col-md-5 col-sm-12 col-xs-12" id="mainblog">
            <div class="well">
             <h4>Blog Search</h4>
             <div class="input-group input-group-unstyled">
@@ -118,7 +118,7 @@
                   </div>                
              </div>
       </div>
-        <hr>
+        <hr><br>
       <footer>
             <div class="row">
                 <div class="col-lg-12 abc">
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </footer>
-        <bR>
+        <bR><br>
    </div>
     </body>
 </html>
