--- a/layout__3.html
+++ b/layout__3.html
@@ -50,12 +50,12 @@
      <div class="container">
        <h2></h2>
      </div>
-            <div class="col-md-7 col-sm-12 col-xs-12">
-              <h1>Blog Post Title</h1>
-              <h3>by <font color="#4286f4">Test</font></h3>
-              <HR>
-                <span> <i class="glyphicon glyphicon-time"></i> Posted on August 21, 2013 at 9:00 PM</span>
-                <hr>
+        <div class="col-md-8 col-sm-12 col-xs-12" id="leftdiv">
+            <h1>Blog Post Title</h1>
+            <h3>by <font color="#4286f4">Test</font></h3>
+            <HR>
+            <span> <i class="glyphicon glyphicon-time"></i> Posted on August 21, 2013 at 9:00 PM</span>
+            <hr>
               <div>
                 <img class="img-responsive" src="http://placehold.it/920x350?text=900*300">
                 <HR>
@@ -72,7 +72,7 @@
                   </div>
               </div>
            </div>
-      <div class="col-md-5 col-sm-12 col-xs-12" id="mainblog">
+      <div class="col-md-4 col-sm-12 col-xs-12" id="mainblog">
            <div class="well">
             <h4>Blog Search</h4>
             <div class="input-group input-group-unstyled">
