--- a/psdtohtml_1.html
+++ b/psdtohtml_1.html
@@ -7,25 +7,27 @@
   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- 	    <link rel="stylesheet" href="psdtohtml.css"> 
+ 	    <link rel="stylesheet" href="psdtohtml_1.css"> 
 	</HEAD>
 	<BODY>
 		<div class="container" id="top">
-		  <div class="col-md-3" id="logo"><img src="image/CORRECTLOGO.png">
+		  <div class="col-md-3" id="logo"><img src="image/CORRECTLOGO.png" width="260px">
 		  </div>
-		  <div class="col-md-4" id="middle"><img src="image/INGREDIENTSDIVISION.png" HEIGHT="30px" width="300px;">
+		  <div class="col-md-4" id="middle"><center><h2 class="headingone">INGREDIENTS DIVISION</h2></center>
 		  </div>
 		  <div class="col-md-5" id="right">
 		  		<div class="col-md-2"> 
-		  			<img src="image/flower.png" HEIGHT="70px" width="130px;"> 
+		  			<img src="image/flower.png" HEIGHT="100px" width="150px;"> 
 		  		</div>
-		  		<div class="col-md-10">
-		  		    <center><p>  <img src="image/StarwestSitesIngredi.png" HEIGHT="30px" width="250px";>   </p></center>
+		  		<div class="col-md-10" class="contentright">
+		  		    <center><p class="green">  Starwest Sites </p>
+		  		    		<p class="red"><u>Ingredients</u> | <u>Retail</u> | <u>Wholesale</u></p>
+		  		    </center>
 		  		     <div class="input-group input-group-unstyled" id="box">
               		   <input type="text" class="form-control" placeholder="Seach products" />
                        <span class="input-group-addon" id="go">
-                         <span>GO</span>
-                       </span>
+                       <butoon><a href="#">Go</a></button>
+                     
                     </div>
 		  	    </div>
 		  </div>
